--- a/src/components/input/Input.scss
+++ b/src/components/input/Input.scss
@@ -1,12 +1,15 @@
+label{
+  -webkit-box-shadow: 2px 6px 14px 0px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 2px 6px 14px 0px rgba(34, 60, 80, 0.2);
+  box-shadow: 2px 6px 14px 0px rgba(34, 60, 80, 0.2);
+}
+
 .input {
-  width: 400px;
+  width: 331px;
   height: 50px;
   font-size: 20px;
   padding-left: 50px;
   outline: none;
-  -webkit-box-shadow: 2px 6px 14px 0px rgba(34, 60, 80, 0.2);
-  -moz-box-shadow: 2px 6px 14px 0px rgba(34, 60, 80, 0.2);
-  box-shadow: 2px 6px 14px 0px rgba(34, 60, 80, 0.2);
   border: 0;
 }
 
@@ -15,4 +18,10 @@
     margin-top: 10px;
     margin-left: 10px;
     cursor: pointer;
+    color: #5282ff;
+}
+
+.btn{
+  float: right;
+  height: 51px;
 }
