--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -12,17 +12,23 @@
   -moz-box-shadow: 2px 6px 14px 0px rgba(34, 60, 80, 0.2);
   box-shadow: 2px 6px 14px 0px rgba(34, 60, 80, 0.2);
 
-  &__checkboxContainer {
+  &__toggleContainer {
     width: 150px;
     justify-content: space-between;
     display: flex;
     cursor: pointer;
 
+    .footer__toggle{
+      padding: 5px 5px 5px 5px;
+    }
+
     .active {
-      border: 0.5px solid gold;
+      background-color: #5282ff;
+      color: white;
       border-radius: 2px;
     }
   }
+
   &__clearBtn {
     cursor: pointer;
   }
